fixed grid css for auto collapsing and max width added function for an array in the database and for printing the div multiple times added default header

--- a/src/main.css
+++ b/src/main.css
@@ -1,15 +1,3 @@
-.grid {
-  border: 4px #000 solid;
-  height: 6cm;
-  width: 10cm;
-  display: grid;
-  grid-template-columns: 4cm 2.5cm 0.5cm 3cm;
-  grid-template-rows: 2.1cm 1.3cm 1.3cm 1.3cm;
-  margin: 2px;
-  border-radius: 17px;
-  text-overflow: ellipsis;
-}
-
 .titlebox{
   color:#fff;
   background-color: #3551a9;
@@ -158,31 +146,53 @@
   margin: 10px;
   align-items: center;
 }
-.BlueBack{
+
+.HeaderBack{
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10px;
+  background-color: #3b3b3b;
+  color: #fff;
+  text-shadow: 2px 2px #3b3b3b;
+  padding: 10px;
+  justify-items: center;
+  justify-content: center;
+  background-size: contain;
+  background-image: url('/public/Imagenes/computer_back.jpg')
+}
+.HeaderWelcome{
+  grid-column: span 3 / span 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  letter-spacing: 3px;
+  padding: 10px;
+}
+
+.HeaderButtons{
+  grid-row-start: 2;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: bolder;
   background-color: #6495ed;
-  letter-spacing: 3px;
   border-radius: 25px;
-  margin: 10px;
-  padding: 10px;
-  height: 3em;
+  height: 5em;
+  width: 5em;
+  text-align: center;
 }
 
-.GrayBack{
+.HeaderLabels{
+  grid-row-start: 3;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: bolder;
-  background-color: #3b3b3b;
-  letter-spacing: 3px;
-  border-radius: 25px;
-  margin: 10px;
-  padding: 10px;
-  height: 3em;
+  text-align: center;
+  width: 5em;
 }
+
 
 .box {
   text-align: center;
@@ -217,15 +227,19 @@
 	z-index: -1;
 }
 
-/*.inputfile + label{
-  display: flex;
-  align-items: center;
-  font-weight: 700;
-  justify-content: center;
-  border-radius: 15px;
-  transition: all 0.5s cubic-bezier(1, -0.01, 0, 1.53) 100ms;
-  cursor: pointer;
-}*/
+.gridvisto {
+  /*Grid para registros vistos*/
+  border: 4px #000 solid;
+  height: 6cm;
+  width: fit-content;
+  max-width: 10cm;
+  display: grid;
+    /*grid-template-columns: 4cm 2.5cm 0.5cm 3cm;*/
+    grid-template-rows: 2.1cm 1.3cm 1.3cm 1.3cm;
+  margin: 2px;
+  border-radius: 20px;
+  text-overflow: ellipsis;
+}
 
 .ghti{
   /*Grid Head Title*/
